# ptp-clock-checker

./: .gitignore  LICENSE  README.md  config.example.json  config.example.yaml  pyproject.toml
.kiro/specs/ptp-instance-tester/: design.md  requirements.md  tasks.md
docs/: INTEGRATION_TESTING_COMPLETE.md  INTEGRATION_TESTING_GUIDE.md
docs/development-history/: PHC_ENABLEMENT_DIAGNOSTICS_ENHANCEMENT.md  PHC_ENABLEMENT_SUCCESS.md  PHC_PARAMETER_NAME_FIX.md  POST_RELOAD_VERIFICATION_IMPLEMENTATION.md  PTP_ENA_SYMLINK_ENHANCEMENT.md  SERVICE_CRASH_ANALYSIS.md  SERVICE_CRASH_DETECTION_COMPLETE.md  SPEC_UPDATE_SUMMARY.md  SSH_RECONNECTION_MECHANISM.md  TASK_11.3_COMPLETE.md  TASK_11.4_COMPLETE.md  TASK_11.5_COMPLETE.md  TASK_11.6_COMPLETE.md  TASK_11.7_COMPLETE.md  TASK_5.11_5.12_COMPLETE.md  TASK_5.19_COMPLETE.md  TASK_7_SUMMARY.md  TASK_8_SUMMARY.md  TASK_9_SUMMARY.md  TESTING_WITH_LATEST_AL2023.md  TEST_ORCHESTRATOR_README.md  TEST_RESULTS_ANALYSIS.md
src/ptp_tester/: __init__.py  aws_manager.py  cli.py  config_loader.py  models.py  ptp_configurator.py  report_generator.py  ssh_manager.py  test_orchestrator.py
